# stm32f2-rs-hello-world

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
