[package]
name = "stm32f2-rs-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

# allow use of `cargo fix`
[[bin]]
name = "stm32f2-rs-hello-world"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
